# vndf

./: Cargo.toml  README.md
design/: backstory.md  roadmap.md  soul-pod.md  voidspace-generator.md
src/: camera.rs  graphics.rs  input.rs  main.rs  ui.rs
src/graphics/: camera.rs  course.rs  mod.rs  nav_marker.rs  projected_path.rs  projectile.rs  rock.rs  rocks.rs  ship.rs  target.rs
src/plugins/: camera.rs  input.rs  mod.rs  ui.rs  world.rs
src/plugins/graphics/: course.rs  mod.rs  nav_marker.rs  projectile.rs  rock.rs  ship.rs  target.rs
src/plugins/world/: mod.rs  physics.rs  player.rs  projectile.rs  rock.rs  ship.rs  target.rs
src/ui/: mod.rs  nav_marker.rs
src/world/: engine.rs  mod.rs  physics.rs  player.rs  projectile.rs  rock.rs  rocks.rs  ship.rs  target.rs
src/world/ship/: engine.rs  engines.rs  mod.rs  rcs.rs  weapons.rs
