[package]
name    = "vndf"
version = "0.1.0"
authors = ["Hanno Braun <hb@hannobraun.de>"]
edition = "2018"

[dependencies]
bevy          = "*"
bevy_rapier2d = "*"
# TASK: Update `pid`. The latest version introduces a breaking change.
pid           = "*"
slog          = "*"
slog-async    = "*"
slog-term     = "*"
