[package]
name    = "vndf"
version = "0.1.0"
authors = ["Hanno Braun <hb@hannobraun.de>"]
edition = "2018"

[dependencies]
# TASK: Upgrade to Bevy 0.4. Currently we're held back by `bevy_rapier2d`, which
#       has not been upgraded yet.
bevy          = "0.3"
bevy_rapier2d = "*"
rand          = "*"
slog          = "*"
slog-async    = "*"
slog-term     = "*"

[profile.dev.package."*"]
opt-level = 3
