[package]
name    = "vndf"
version = "0.1.0"
authors = ["Hanno Braun <hb@hannobraun.de>"]
edition = "2018"

[dependencies]
bevy          = "*"
bevy_rapier2d = "*"
rand          = "*"

[profile.dev.package."*"]
opt-level = 3

# TASK: Look into using dynamic linking for Bevy, to minimize compile times.
